se agrega index mamaybebe

--- a/index_mobile_bellezaymoda.html
+++ b/index_mobile_bellezaymoda.html
@@ -60,6 +60,18 @@ path_include ("esmas_path/comscore/daxheader.php");
 				});
 			});
 </script>
+<style>
+.headlinesThumbnail li h5 {
+	font: normal 10px/12px Helvetica;
+	color: #8493B2;
+}
+.headlinesThumbnail li h2 {
+	font: normal 14px/17px Helvetica;
+	color: #666666;
+	margin: 0 0 8px 0;
+}
+
+</style>
 <div id="wrapper" data-role="page">
     {SWITCH:START:COUNTRY_CODE}
 	{CASE:US}
@@ -89,53 +101,63 @@ path_include ("esmas_path/comscore/daxheader.php");
 		<a href="http://www2.esmas.com/mujer/belleza-y-moda/" title=""><img src="http://i2.esmas.com/iphone/img/bt_sitionormal.gif" width="110" height="25" alt="" border="0"></a>
 		<span><script>PrintDate();</script></span>
 	</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:nota_princ:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:nota_princ:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:nota_princ:TITLE:editorial=yes}" title="{ART:nota_princ:TITLE:editorial=yes}">	
 			<h2>{ART:nota_princ:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:nota_princ:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 	</ul>
 	<div class="title">Belleza</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:belleza_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:belleza_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:belleza_nota1:TITLE:editorial=yes}" title="{ART:belleza_nota1:TITLE:editorial=yes}">
 			<h2>{ART:belleza_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:nota_princ:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li onClick="GoLink(this, '{ART:belleza_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:belleza_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:belleza_nota2:TITLE:editorial=yes}" title="{ART:belleza_nota2:TITLE:editorial=yes}">
 			<h2>{ART:belleza_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:belleza_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:belleza_nota3:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:belleza_nota3:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:belleza_nota3:TITLE:editorial=yes}" title="{ART:belleza_nota3:TITLE:editorial=yes}">
 			<h2>{ART:belleza_nota3:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:belleza_nota3:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
 	</ul>
 	<div class="title">Moda</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:moda_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:moda_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:moda_nota1:TITLE:editorial=yes}" title="{ART:moda_nota1:TITLE:editorial=yes}">
 			<h2>{ART:moda_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:moda_nota1:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li onClick="GoLink(this, '{ART:moda_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:moda_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:moda_nota2:TITLE:editorial=yes}" title="{ART:moda_nota2:TITLE:editorial=yes}">
 			<h2>{ART:moda_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:moda_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:moda_nota3:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:moda_nota3:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:moda_nota3:TITLE:editorial=yes}" title="{ART:moda_nota3:TITLE:editorial=yes}">
 			<h2>{ART:moda_nota3:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:moda_nota3:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
 	</ul>
 	<div class="title">Consejos</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:consejos_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:consejos_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:consejos_nota1:TITLE:editorial=yes}" title="{ART:consejos_nota1:TITLE:editorial=yes}">
 			<h2>{ART:consejos_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:consejos_nota1:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li onClick="GoLink(this, '{ART:consejos_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:consejos_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:consejos_nota2:TITLE:editorial=yes}" title="{ART:consejos_nota2:TITLE:editorial=yes}">
 			<h2>{ART:consejos_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:consejos_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:consejos_nota3:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:consejos_nota3:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:consejos_nota3:TITLE:editorial=yes}" title="{ART:consejos_nota3:TITLE:editorial=yes}">
 			<h2>{ART:consejos_nota3:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:consejos_nota3:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
