--- a/mobile_carrusel_mujer.html
+++ b/mobile_carrusel_mujer.html
@@ -48,7 +48,7 @@
             
             jQuery('#camera_wrap_1').camera({
                 thumbnails: false,
-                pagination: true,
+                pagination: false,
                 loader: 'none',
                 playPause: false,
                 fx:'scrollLeft',
