--- a/mobile_nt_sexoyamor.html
+++ b/mobile_nt_sexoyamor.html
@@ -138,7 +138,7 @@ include (PATH_CONTENT."comscore/daxheader.php");
 							<li data-icon="arrow-d">
 								<?
 								$art1=$article->relations('type=art[0],link');
-								$art1= str_replace('http://noticierostelevisa.esmas.com', 'http://m.noticierostelevisa.esmas.com', $art1);
+								$art1= str_replace('http://www2.esmas.com', 'http://m.esmas.com', $art1);
 								?>
 								<a class="article-rel" href="<?=$art1;?>" target="_blank">{ART:article:RELATIONS:type=ART[0],TITLE,editorial=yes} </a>
 							</li>
@@ -147,7 +147,7 @@ include (PATH_CONTENT."comscore/daxheader.php");
 							<li data-icon="arrow-d">
 								<?
 								$art2=$article->relations('type=art[1],link');
-								$art2= str_replace('http://noticierostelevisa.esmas.com', 'http://m.noticierostelevisa.esmas.com', $art2);
+								$art2= str_replace('http://www2.esmas.com', 'http://m.esmas.com', $art2);
 								?>
 								<a class="article-rel" href="<?=$art2;?>" target="_blank">{ART:article:RELATIONS:type=ART[1],TITLE,editorial=yes} </a>
 							</li>
@@ -156,7 +156,7 @@ include (PATH_CONTENT."comscore/daxheader.php");
 							<li data-icon="arrow-d">
 								<?
 								$art3=$article->relations('type=art[2],link');
-								$art3= str_replace('http://noticierostelevisa.esmas.com', 'http://m.noticierostelevisa.esmas.com', $art3);
+								$art3= str_replace('http://www2.esmas.com', 'http://m.esmas.com',$art3);
 								?>
 								<a class="article-rel" href="<?=$art3;?>" target="_blank">{ART:article:RELATIONS:type=ART[2],TITLE,editorial=yes} </a>
 							</li>
