--- a/index_mobile_sexoyamor.html
+++ b/index_mobile_sexoyamor.html
@@ -39,6 +39,18 @@
 		}
 		document.addEventListener('DOMContentLoaded', loaded, false);
 	</script>
+	<style>
+	.headlinesThumbnail li h5 {
+		font: normal 10px/12px Helvetica;
+		color: #8493B2;
+	}
+	.headlinesThumbnail li h2 {
+		font: normal 14px/17px Helvetica;
+		color: #666666;
+		margin: 0 0 8px 0;
+	}
+
+	</style>
 </head>
 
 <body>
@@ -94,49 +106,58 @@
 		<a href="http://www2.esmas.com/mujer/sexo-y-amor/" title=""><img src="http://i2.esmas.com/iphone/img/bt_sitionormal.gif" width="110" height="25" alt="" border="0"></a>
 		<span><script>PrintDate();</script></span>
 	</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:nota_princ:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:nota_princ:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:nota_princ:TITLE:editorial=yes}" title="{ART:nota_princ:TITLE:editorial=yes}">			
 			<h2>{ART:nota_princ:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:nota_princ:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 	</ul>
 	<div class="title">Erotismo</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:erotismo_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:erotismo_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:erotismo_nota1:TITLE:editorial=yes}" title="{ART:erotismo_nota1:TITLE:editorial=yes}">			
 			<h2>{ART:erotismo_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:erotismo_nota1:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:erotismo_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:erotismo_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:erotismo_nota2:TITLE:editorial=yes}" title="{ART:erotismo_nota2:TITLE:editorial=yes}">
 			<h2>{ART:erotismo_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:erotismo_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
 	</ul>
 	<div class="title">Salud Sexual</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:saludsex_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:saludsex_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:saludsex_nota1:TITLE:editorial=yes}" title="{ART:saludsex_nota1:TITLE:editorial=yes}">
 			<h2>{ART:saludsex_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:saludsex_nota1:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li onClick="GoLink(this, '{ART:saludsex_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:saludsex_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:saludsex_nota2:TITLE:editorial=yes}" title="{ART:saludsex_nota2:TITLE:editorial=yes}">
 			<h2>{ART:saludsex_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:saludsex_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:saludsex_nota3:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:saludsex_nota3:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:saludsex_nota3:TITLE:editorial=yes}" title="{ART:saludsex_nota3:TITLE:editorial=yes}">
 			<h2>{ART:saludsex_nota3:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:saludsex_nota3:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
 	</ul>
 	<div class="title">Amor</div>
-	<ul class="headlines bkgArrow">
+	<ul class="headlinesThumbnail bkgArrow">
 		<li onClick="GoLink(this, '{ART:amor_nota1:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:amor_nota1:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:amor_nota1:TITLE:editorial=yes}" title="{ART:amor_nota1:TITLE:editorial=yes}">
 			<h2>{ART:amor_nota1:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:amor_nota1:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
 		<li onClick="GoLink(this, '{ART:amor_nota2:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:amor_nota2:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:amor_nota2:TITLE:editorial=yes}" title="{ART:amor_nota2:TITLE:editorial=yes}">
 			<h2>{ART:amor_nota2:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:amor_nota2:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>	
 		<li class="noBottom" onClick="GoLink(this, '{ART:amor_nota3:LINK:mobile}');">
+			<img width="120" height="90" src="{ART:amor_nota3:RELATIONS:type=img[0],link,width=120,height=90}" alt="{ART:amor_nota3:TITLE:editorial=yes}" title="{ART:amor_nota3:TITLE:editorial=yes}">
 			<h2>{ART:amor_nota3:TITLE:editorial=yes}</h2>
 			<h5>Hace {ART:amor_nota3:DURATION:anio/mes/dia/hora/min}</h5>
 		</li>
